# SpecForge

./: .gitignore  CLAUDE.md  CODEBASE_ANALYSIS.txt  CODEBASE_EXPLORATION_SUMMARY.txt  COMPLETE_CODEBASE_CONTENTS.txt  FEATURE_003_IMPLEMENTATION_GUIDE.txt  FEATURE_011_ARCHITECTURE.md  FEATURE_011_TECHNICAL_CONTEXT.md  QUICK_REFERENCE.txt  README-OLD.md  README.md  pyproject.toml  requirement.md  ruff.toml  spec-req.txt  specforge-roadmap.docx
.specify/memory/: constitution.md
specs/001-cli-init-scaffold/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-cli-init-scaffold/: data-model.md  plan.md  quickstart.md  research.md  spec.md
specs/002-template-rendering-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-agent-prompt-governance/: data-model.md  plan.md  research.md  spec.md  tasks.md
specs/004-architecture-decomposer/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-spec-generation-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-research-clarification-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-edge-case-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-task-generation-engine/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-sub-agent-executor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-quality-validation-system/: data-model.md  plan.md  quickstart.md  (+3 more)
(+563 files in other folders)
