[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "specforge"
version = "0.1.0"
description = "AI-powered spec-driven development engine"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "click>=8.0,<9.0",
    "jinja2>=3.0,<4.0",
    "rich>=13.0,<14.0",
    "gitpython>=3.0,<4.0",
]

[project.scripts]
specforge = "specforge.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "syrupy>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/specforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "syrupy>=4.0",
]
